--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Ruethaiboon | Portfolio</title>
-  <meta name="description" content="Self Developed personal website build with React.js">
+  <title>Portfolio</title>
+  <meta name="description" content="Build with React.js">
 
   <!-- Google / Search Engine Tags -->
   <!-- <meta itemprop="name" content="Ruethaiboon | Portfolio">
