--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
   <!-- Twitter Meta Tags -->
   <!-- <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Ruethaiboon | Portfolio">
+  <meta name="twitter:title" content="Ruethaiboon | Portfolio"> -->
 </head>
 
 <body>
